# OS_Labs_SPBPU_2020

./: .gitignore  README.md
Karasev.Alex/lab1/: CMakeLists.txt  Daemon.cpp  Daemon.h  Error.h  Parser.cpp  Parser.h  build.sh  config.txt  main.cpp
Karasev.Alex/lab2/: Makefile
Karasev.Alex/lab3/: Coarse.h  Coarse.hpp  Lazy.h  Lazy.hpp  Makefile  main.cpp  set.h  tests.cpp  tests.h
Lab1/: Event.cpp  Event.h  build.sh  daemon.cpp  daemon.h  main.cpp
Lab1/add_event/: build_add_event.sh  main.cpp
Lab2/: makefile
Lab2/conns/: conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
Lab2/host/: Goat.cpp  Goat.h  Wolf.cpp  Wolf.h  host.cpp
Lab2/interface/: conn.h
Lab2/utils/: MyException.h  SemaphoreWrapper.cpp  SemaphoreWrapper.h
Samutichev.Evgenii/lab1/: ConfigReader.cpp  ConfigReader.h  Daemon.cpp  Daemon.h  Error.h  FolderWorker.cpp  FolderWorker.h  build.sh  main.cpp  (+1 more)
damaskinskiy.konstantin/: .gitignore
damaskinskiy.konstantin/lab2/: CMakeLists.txt  Makefile  dates.txt
damaskinskiy.konstantin/lab2/src/: client.cpp  con_fifo.cpp  con_mq.cpp  con_shm.cpp  conn.h  host.cpp  host.h  predictor.cpp  predictor.h  semaphore.cpp  semaphore.h
kolesnik.victor/lab1/: CMakeLists.txt  build.sh  config.txt
kolesnik.victor/lab1/include/: ConfigParser.h  DaemonManager.h  FileTransfer.h
kolesnik.victor/lab1/src/: ConfigParser.cpp  DaemonManager.cpp  FileTransfer.cpp  main.cpp
kozlov.dmitrii/lab1/: CMakeLists.txt  build.sh  cfg_parser.cpp  cfg_parser.h  config.cfg  constants.h  daemon_base.cpp  daemon_base.h  lab1  main.cpp  my_daemon.cpp  my_daemon.h  my_handler.h  types.h
lab1/: Demon.h  Demon_impl.cpp  Makefile  NeededInfo.h  NeededInfo_impl.cpp  SubMethods.h  SubMethods_impl.cpp  build.sh  conf.conf  config.txt  daemon.cpp  daemon.h  daemon_conf.txt  daemon_impl.cpp  error.h  file_handler.h  file_handler_impl.cpp  lab1.cpp  main.cpp  parser.cpp  parser.h  run.sh  scr.sh  script_for_test.sh  test.sh  user_exception.h
lab2/: ConnHelper.cpp  ConnHelper.h  DTStor.cpp  DTStor.h  Host_Conn_Inf.h  Makefile  build.sh  client_cls.cpp  client_cls.h  client_main.cpp  conn.h  conn_fifo.cpp  conn_fifo.h  conn_seg.cpp  conn_seg.h  conn_shm.cpp  conn_shm.h  host_cls.cpp  host_cls.h  host_fifo  host_main.cpp  host_pipe  host_sock  in.txt
labs/: .~lock.lab2.docx#
schastlivtsev.nikita/lab1/: CMakeLists.txt  DaemonCreator.cpp  DaemonCreator.h  DaemonProcedure.cpp  DaemonProcedure.h  Helpers.cpp  Helpers.h  LogLogger.cpp  LogLogger.h  ProcedureBoss.cpp  ProcedureBoss.h  Settings.cpp  Settings.h  SettingsManager.cpp  SettingsManager.h  SignalHandler.cpp  SignalHandler.h  compileProject.sh  config.txt  main.cpp
(+369 files in other folders)
